# 231-3212_TicTacToe

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  test.db  Механизм ролей.docx  Стратегия тестирования.xlsx  ТЗ_ТИМП.docx
Doxygen/: 231-3212___tic_tac_toe-backend_2231-3212___tic_tac_toe-backend_2_r_e_a_d_m_e_8md.html  231-3212___tic_tac_toe-backend_2231-3212___tic_tac_toe-backend_2src_2main_8cpp.html  231-3212___tic_tac_toe-backend_2231-3212___tic_tac_toe-backend_2src_2main_8cpp_source.html  231-3212___tic_tac_toe-frontend_2231-3212___tic_tac_toe-frontend_2_r_e_a_d_m_e_8md.html  231-3212___tic_tac_toe-frontend_2231-3212___tic_tac_toe-frontend_2src_2main_8cpp.html  231-3212___tic_tac_toe-frontend_2231-3212___tic_tac_toe-frontend_2src_2main_8cpp_source.html  annotated.html  application_8cpp.html  application_8cpp_source.html  application_8h.html  application_8h_source.html  auth__window_8cpp.html  auth__window_8cpp_source.html  auth__window_8h.html  auth__window_8h_source.html  class_application-members.html  class_application.html  class_auth_window-members.html  class_auth_window.html  class_client-members.html  class_client.html  class_database_repository-members.html  class_database_repository.html  class_game_coordinator-members.html  class_game_coordinator.html  class_game_list_window-members.html  class_game_list_window.html  class_game_server-members.html  class_game_server.html  class_network-members.html  class_network.html  class_renderer-members.html  class_renderer.html  class_socket-members.html  class_socket.html  class_tic_tac_toe_window-members.html  class_tic_tac_toe_window.html  classes.html  client_8cpp.html  client_8cpp_source.html  (+66 more)
Doxygen/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_7.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  functions_0.js  (+23 more)
src/: main.cpp
src/game/: game_server.cpp  game_server.h
src/manager/: application.cpp  application.h  game_coordinator.cpp  game_coordinator.h
src/network/: client.cpp  client.h  network.cpp  network.h  socket.cpp  socket.h
src/repository/: database_repository.cpp  database_repository.h
src/ui/: renderer.cpp  renderer.h
src/ui/components/: auth_window.cpp  auth_window.h  game_list_window.cpp  game_list_window.h  game_window.cpp  game_window.h
